--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -86,7 +86,6 @@
                                             <ul class="sub-menu mm-collapse" aria-expanded="false">
                                                 <li><a th:href="@{/instance_status}">即时状态查看</a></li>
                                                 <li><a th:href="@{/alarm_record}">报警记录分析</a></li>
-                                                <li><a th:href="@{/count_analysis}">设备产量计数分析</a></li>
                                             </ul>
 
                                         </li>
@@ -104,8 +103,9 @@
                                                 class="ri-bar-chart-2-fill"></i><span>产量分析看板</span></a>
 
                                             <ul class="sub-menu mm-collapse" aria-expanded="false">
-                                                <li><a th:href="@{/output}">产量数据</a></li>
-                                                <li><a th:href="@{/pruduct_information}">产品信息</a></li>
+<!--                                                <li><a th:href="@{/output}">产量数据</a></li>-->
+<!--                                                <li><a th:href="@{/pruduct_information}">产品信息</a></li>-->
+                                                <li><a th:href="@{/count_analysis}">设备产量计数分析</a></li>
                                                 <li><a th:href="@{/time_analysis}">用时分析</a></li>
                                             </ul>
 
