--- a/src/main/resources/templates/kanban-baojingjilu.html
+++ b/src/main/resources/templates/kanban-baojingjilu.html
@@ -44,8 +44,8 @@
                         <div class="card text-white-50" th:classappend="${status_OP40.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_OP40.get(2)}"></i>OP40-车床</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_OP40.get(0)}"]></span></span><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                                &nbsp;&nbsp;<span class="zhuangT0" th:text="' [' + ${status_OP40.get(0)} + '] '">[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院&nbsp;</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
@@ -64,8 +64,8 @@
                         <div class="card text-white-50" th:classappend="${status_OP50.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_OP50.get(2)}"></i>OP50-车床</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_OP50.get(0)}"]></span></span><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                                &nbsp;&nbsp;<span class="zhuangT0" th:text="' [' + ${status_OP50.get(0)} + '] '">[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院&nbsp;</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
@@ -88,8 +88,8 @@
                         <div class="card text-white-50" th:classappend="${status_OP60.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_OP60.get(2)}"></i>OP60-立加</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_OP60.get(0)}"]></span></span><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                                &nbsp;&nbsp;<span class="zhuangT0" th:text="' [' + ${status_OP60.get(0)} + '] '">[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院&nbsp;</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
@@ -108,8 +108,8 @@
                         <div class="card text-white-50" th:classappend="${status_OP70.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_OP70.get(2)}"></i>OP70-立加</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_OP70.get(0)}"]></span></span><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                                &nbsp;&nbsp;<span class="zhuangT0" th:text="' [' + ${status_OP70.get(0)} + '] '">[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院&nbsp;</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
@@ -132,8 +132,8 @@
                         <div class="card text-white-50" th:classappend="${status_PLC1.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_PLC1.get(2)}"></i>总控PLC-1</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_PLC1.get(0)}"]></span></span><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                                &nbsp;&nbsp;<span class="zhuangT0" th:text="' [' + ${status_PLC1.get(0)} + '] '">[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院&nbsp;</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
@@ -152,8 +152,8 @@
                         <div class="card text-white-50" th:classappend="${status_PLC2.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_PLC2.get(2)}"></i>总控PLC-2</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_PLC2.get(0)}"]></span></span><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                                &nbsp;&nbsp;<span class="zhuangT0" th:text="' [' + ${status_PLC2.get(0)} + '] '">[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院&nbsp;</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
@@ -176,8 +176,8 @@
                         <div class="card text-white-50" th:classappend="${status_measure.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_measure.get(2)}"></i>测量机</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_measure.get(0)}"]></span></span><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                                &nbsp;&nbsp;<span class="zhuangT0" th:text="' [' + ${status_measure.get(0)} + '] '">[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院&nbsp;</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
@@ -196,8 +196,8 @@
                         <div class="card text-white-50" th:classappend="${status_target.get(1)}"><!---->
                             <div class="card-body"><h5 class="mt-0 mb-4 text-white"><i
                                     class="mdi mr-3" th:classappend="${status_target.get(2)}"></i>打标机</h5><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;[<span th:text="${status_target.get(0)}"]></span></span><!---->
-                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院</span>
+                                &nbsp;&nbsp;<span class="zhuangT0" th:text="' [' + ${status_target.get(0)} + '] '">[设定]</span><!---->
+                                &nbsp;&nbsp;<span class="zhuangT0">&nbsp;无锡职业技术学院&nbsp;</span>
                             </div>
                         </div>
                         <div class="span3 pre-scrollable" style="height:200px">
