--- a/src/main/resources/static/css/diy.css
+++ b/src/main/resources/static/css/diy.css
@@ -4,13 +4,14 @@
 
 }
 .name{
+    width: 520px;
     color:whitesmoke;
     border-style: solid;
-    text-align: center;
+    text-align: left;
     font-size: 30px;
     border-color: #bfbfbf;
     border-width: 1px;
-    background-color: #9013ec;
+    background-color: #000000;
     border-radius: 8px;
     padding: 10px;
 }
@@ -36,4 +37,11 @@
     font-size: 20px;
     text-align: left;
     margin: -10px 15px 15px 15px
+}
+
+.img1{
+    float: right;
+    margin-top: -10px;
+    border-radius: 100px;
+    box-shadow: #333333 -3px 3px
 }
