--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -85,6 +85,7 @@
 
                                             <ul class="sub-menu mm-collapse" aria-expanded="false">
                                                 <li><a th:href="@{/instance_status}">即时状态查看</a></li>
+                                                <li><a th:href="@{/status_distribute}">状态分布看板</a></li>
                                                 <li><a th:href="@{/alarm_record}">报警记录分析</a></li>
                                             </ul>
 
@@ -111,9 +112,9 @@
 
                                         </li>
 
-                                        <li><a th:href="@{/status_distribute}" class="waves-effect"><i
-                                                class="ri-pie-chart-fill"></i><span>状态分布看板</span></a>
-                                        </li>
+<!--                                        <li><a th:href="@{/status_distribute}" class="waves-effect"><i-->
+<!--                                                class="ri-pie-chart-fill"></i><span>状态分布看板</span></a>-->
+<!--                                        </li>-->
 
                                         <li><a th:href="@{/OEE}" class=" waves-effect"><i
                                                 class=" ri-line-chart-fill"></i><span>整线OEE分析</span></a></li>
