--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -94,9 +94,9 @@
                                         <li><a href="javascript: void(0);" class="has-arrow waves-effect"><i
                                                 class="ri-alarm-fill"></i><span>实时数据看板</span></a>
                                             <ul class="sub-menu mm-collapse" aria-expanded="false">
-                                                <li><a th:href="@{/use_ratio}">设备利用率</a></li>
-                                                <li><a th:href="@{/activation}">设备稼动率</a></li>
-                                                <li><a th:href="@{/board_deviceParameter}">设备过程参数</a></li>
+<!--                                                <li><a th:href="@{/use_ratio}">设备利用率</a></li>-->
+<!--                                                <li><a th:href="@{/activation}">设备稼动率</a></li>-->
+                                                <li><a th:href="@{/device_parameter}">设备过程参数</a></li>
                                             </ul>
                                         </li>
 
