--- a/src/main/resources/templates/cutter.html
+++ b/src/main/resources/templates/cutter.html
@@ -45,11 +45,11 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-body  pt-0">
-                                <ul class="nav nav-tabs nav-tabs-custom mb-4">
-                                    <li class="nav-item"><a class="nav-link font-weight-bold p-3 active" href="#">全部刀具信息</a></li>
-                                    <li class="nav-item"><a class="nav-link p-3 font-weight-bold" th:href="@{/cutter_all}">汇总查询</a>
-                                    </li>
-                                </ul>
+<!--                                <ul class="nav nav-tabs nav-tabs-custom mb-4">-->
+<!--                                    <li class="nav-item"><a class="nav-link font-weight-bold p-3 active" href="#">全部刀具信息</a></li>-->
+<!--                                    <li class="nav-item"><a class="nav-link p-3 font-weight-bold" th:href="@{/cutter_all}">汇总查询</a>-->
+<!--                                    </li>-->
+<!--                                </ul>-->
                                 <div class="table-responsive">
                                     <table class="table table-centered datatable dt-responsive nowrap "
                                            style="border-collapse: collapse; border-spacing: 0; width: 100%;">
