--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body data-sidebar="dark" class="bgc">
+<body data-sidebar="dark" class="bg-img bgc">
 <!-- Begin page -->
 <div id="layout-wrapper">
 
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="page-title-box d-flex align-items-center justify-content-between">
-                            <h4 class="mb-0" style="font-size: x-large;color: #3fc3ee" align="center">欢迎来到主页！</h4>
+                            <h1 class="mb-0" style="font-size: x-large;color: whitesmoke;margin-left: 450px">欢迎来到主页！</h1>
 <!--无用的右侧标题-->
 <!--                            <div class="page-title-right">-->
 <!--                                <ol class="breadcrumb m-0">-->
