--- a/src/main/resources/templates/productionplan.html
+++ b/src/main/resources/templates/productionplan.html
@@ -110,17 +110,17 @@
                                             <td th:text="${item.getPlannedend()}">x</td>
                                             <td th:text="${item.getActualstart()}">x</td>
                                             <td th:text="${item.getActualend()}">x</td>
-                                            <td>
-                                                <div class="badge badge-soft-success font-size-12">正常</div>
-                                            </td>
-                                            <td><a href="javascript:void(0);" class="mr-3 text-primary"
-                                                   data-toggle="tooltip" data-placement="top" title=""
-                                                   data-original-title="Edit"><i
-                                                    class="mdi mdi-pencil font-size-18"></i></a><a
-                                                    href="javascript:void(0);" class="text-danger" data-toggle="tooltip"
-                                                    data-placement="top" title="" data-original-title="Delete"><i
-                                                    class="mdi mdi-trash-can font-size-18"></i></a></td>
-                                        </tr>
+<!--                                            <td>-->
+<!--                                                <div class="badge badge-soft-success font-size-12">正常</div>-->
+<!--                                            </td>-->
+<!--                                            <td><a href="javascript:void(0);" class="mr-3 text-primary"-->
+<!--                                                   data-toggle="tooltip" data-placement="top" title=""-->
+<!--                                                   data-original-title="Edit"><i-->
+<!--                                                    class="mdi mdi-pencil font-size-18"></i></a><a-->
+<!--                                                    href="javascript:void(0);" class="text-danger" data-toggle="tooltip"-->
+<!--                                                    data-placement="top" title="" data-original-title="Delete"><i-->
+<!--                                                    class="mdi mdi-trash-can font-size-18"></i></a></td>-->
+<!--                                        </tr>-->
 
                                         </tbody>
                                     </table>
